plpgsql/grammar.js
    source_file: $ => seq(
      optional($.comp_options),
      $.pl_block,
      optional(';')
    ),

    // ── Compiler options ──────────────────────────────────────────────────────
    // #option dump / #print_strict_params on|off / #variable_conflict ...
    pl_block: $ => seq(
      optional($.block_label),
      optional($.decl_sect),
      $.kw_begin,
      optional($.proc_sect),
      optional($.exception_sect),
      $.kw_end,
      optional($.end_label)
    ),

    proc_sect: $ => repeat1($.proc_stmt),

    proc_stmt: $ => choice(
      seq($.pl_block, ';'),
      $.stmt_assign,
      $.stmt_if,
      $.stmt_case,
      $.stmt_loop,
      $.stmt_while,
      $.stmt_for,
      $.stmt_foreach_a,
      $.stmt_exit,
      $.stmt_return,
      $.stmt_raise,
      $.stmt_assert,
      $.stmt_execsql,
      $.stmt_dynexecute,
      $.stmt_perform,
      $.stmt_call,
      $.stmt_getdiag,
      $.stmt_open,
      $.stmt_fetch,
      $.stmt_move,
      $.stmt_close,
      $.stmt_null,
      $.stmt_commit,
      $.stmt_rollback
    ),

    // ── Assignment ────────────────────────────────────────────────────────────
    // The target is consumed by the external scanner (it stops at := and =).
    // We use prec.dynamic to prefer assignments over exec SQL.
    stmt_assign: $ => prec.dynamic(10, seq(
      $._sql_assignment_expr,
      choice(':=', '='),
      $._sql_semicolon_expr,
      ';'
    )),

    // ── IF/ELSIF/ELSE ─────────────────────────────────────────────────────────
    stmt_if: $ => seq(
      $.kw_if, $._sql_then_expr, $.kw_then,
      optional($.proc_sect),
      repeat($.elsif_clause),
      optional($.else_clause),
      $.kw_end, $.kw_if, ';'
    ),

    stmt_while: $ => seq(
      optional($.loop_label),
      $.kw_while, $._sql_loop_expr, $.kw_loop,
      $.loop_body
    ),

    // ── FOR ───────────────────────────────────────────────────────────────────
    stmt_for: $ => seq(
      optional($.loop_label),
      $.kw_for, $.for_variable, $.kw_in,
      choice(
        $.for_integer_range,
        $.for_query,
        $.for_cursor,
        $.for_dynamic
      ),
      $.loop_body
    ),

    for_variable: $ => seq(
      $.any_identifier,
      repeat(seq(',', $.any_identifier))
    ),

    for_integer_range: $ => seq(
      optional($.kw_reverse),
      $._sql_range_expr, '..', $._sql_by_or_loop_expr,
      optional(seq($.kw_by, $._sql_loop_expr)),
      $.kw_loop
    ),

    for_query: $ => seq(
      $._sql_loop_expr,
      $.kw_loop
    ),

    for_dynamic: $ => seq(
      $.kw_execute, $._sql_using_or_loop_expr,
      optional(seq($.kw_using, $._sql_comma_or_loop_expr, repeat(seq(',', $._sql_comma_or_loop_expr)))),
      $.kw_loop
    ),

    // ── FOREACH ───────────────────────────────────────────────────────────────
    stmt_foreach_a: $ => seq(
      optional($.loop_label),
      $.kw_foreach, $.for_variable,
      optional(seq($.kw_slice, $.integer_literal)),
      $.kw_in, $.kw_array,
      $._sql_loop_expr, $.kw_loop,
      $.loop_body
    ),

    loop_body: $ => seq(
      optional($.proc_sect),
      $.kw_end, $.kw_loop,
      optional($.any_identifier),
      ';'
    ),

    // ── EXIT/CONTINUE ─────────────────────────────────────────────────────────
    stmt_return: $ => choice(
      // RETURN expression ; — guarded so NEXT/QUERY lex as keywords below
      seq($.kw_return, optional($._sql_semicolon_guarded_expr), ';'),
      // RETURN NEXT [expression] ; — expression omitted with OUT parameters
      seq($.kw_return, $.kw_next, optional($._sql_semicolon_expr), ';'),
      // RETURN QUERY sql ; — guarded so EXECUTE lexes as a keyword below
      seq($.kw_return, $.kw_query, $._sql_semicolon_guarded_expr, ';'),
      // RETURN QUERY EXECUTE expression [USING ...] ;
      seq($.kw_return, $.kw_query, $.kw_execute, $._sql_using_or_semicolon_expr,
          optional(seq($.kw_using, $._sql_comma_or_semicolon_expr, repeat(seq(',', $._sql_comma_or_semicolon_expr)))),
          ';')
    ),

    // ── RAISE ─────────────────────────────────────────────────────────────────
    stmt_raise: $ => seq(
      $.kw_raise,
      optional($.raise_level),
      optional(choice(
        // Format string with parameters
        seq($.string_literal, repeat(seq(',', $._sql_comma_using_or_semicolon_expr))),
        // Condition name
        $.any_identifier,
        // SQLSTATE 'xxxxx'
        seq($.kw_sqlstate, $.string_literal)
      )),
      optional(seq($.kw_using, $.raise_option, repeat(seq(',', $.raise_option)))),
      ';'
    ),

    raise_level: $ => choice(
      $.kw_exception,
      $.kw_warning,
      $.kw_notice,
      $.kw_info,
      $.kw_log,
      $.kw_debug
    ),

    raise_option: $ => seq(
      choice(
        $.kw_message,
        $.kw_detail,
        $.kw_hint,
        $.kw_errcode,
        $.kw_column,
        $.kw_constraint,
        $.kw_datatype,
        $.kw_table,
        $.kw_schema
      ),
      '=',
      $._sql_comma_or_semicolon_expr
    ),

    // ── ASSERT ────────────────────────────────────────────────────────────────
    stmt_assert: $ => seq(
      $.kw_assert,
      $._sql_comma_or_semicolon_expr,
      optional(seq(',', $._sql_semicolon_expr)),
      ';'
    ),

    // ── EXECUTE (dynamic SQL) ─────────────────────────────────────────────────
    stmt_dynexecute: $ => seq(
      $.kw_execute, $._sql_into_using_or_semicolon_expr,
      optional(seq($.kw_into, optional($.kw_strict), $.into_target)),
      optional(seq($.kw_using, $._sql_comma_or_semicolon_expr, repeat(seq(',', $._sql_comma_or_semicolon_expr)))),
      ';'
    ),

    // ── PERFORM ───────────────────────────────────────────────────────────────
    stmt_perform: $ => seq(
      $.kw_perform, $._sql_semicolon_expr, ';'
    ),

    // ── CALL / DO ─────────────────────────────────────────────────────────────
    stmt_call: $ => seq(
      choice($.kw_call, $.kw_do), $._sql_semicolon_expr, ';'
    ),

    // ── GET DIAGNOSTICS ───────────────────────────────────────────────────────
    stmt_getdiag: $ => seq(
      $.kw_get,
      optional(choice($.kw_current, $.kw_stacked)),
      $.kw_diagnostics,
      $.getdiag_list_item,
      repeat(seq(',', $.getdiag_list_item)),
      ';'
    ),

    getdiag_list_item: $ => seq(
      $.any_identifier,
      choice('=', ':='),
      $.getdiag_item
    ),

    getdiag_item: $ => choice(
      $.kw_row_count,
      $.kw_pg_routine_oid,
      $.kw_pg_context,
      $.kw_pg_exception_detail,
      $.kw_pg_exception_hint,
      $.kw_pg_exception_context,
      $.kw_column_name,
      $.kw_constraint_name,
      $.kw_pg_datatype_name,
      $.kw_message_text,
      $.kw_table_name,
      $.kw_schema_name,
      $.kw_returned_sqlstate
    ),

    // ── OPEN cursor ───────────────────────────────────────────────────────────
    stmt_null: $ => seq($.kw_null, ';'),

    // ── COMMIT/ROLLBACK ───────────────────────────────────────────────────────
    stmt_commit: $ => seq(
      $.kw_commit,
      optional($.opt_transaction_chain),
      ';'
    ),

    stmt_rollback: $ => seq(
      $.kw_rollback,
      optional($.opt_transaction_chain),
      ';'
    ),

    opt_transaction_chain: $ => choice(
      seq($.kw_and, $.kw_chain),
      seq($.kw_and, $.kw_no, $.kw_chain)
    ),

    // ── Exec SQL (pass-through SQL statement) ─────────────────────────────────
    stmt_execsql: $ => seq(
      $._sql_statement_expr,
      ';'
    ),

    into_target: $ => seq(
      $.any_identifier,
      repeat(seq(',', $.any_identifier))
    ),

    // ── Exception handling ────────────────────────────────────────────────────
    exception_sect: $ => seq(
      $.kw_exception,
      repeat1($.proc_exception)
    ),

    proc_exception: $ => seq(
      $.kw_when,
      $.proc_conditions,
      $.kw_then,
      optional($.proc_sect)
    ),

    proc_conditions: $ => seq(
      $.proc_condition,
      repeat(seq($.kw_or, $.proc_condition))
    ),

    proc_condition: $ => choice(
      $.any_identifier,
      seq($.kw_sqlstate, $.string_literal)
    ),

    // ── SQL fragments ────────────────────────────────────────────────────────
    // Opaque nodes that capture SQL fragments. PostgreSQL's real PL/pgSQL
    // parser reads embedded SQL with context-specific terminators: IF reads
    // until THEN, WHILE/FOR reads until LOOP, dynamic EXECUTE reads until
    // INTO/USING/;, and plain SQL statements read until ;. Mirroring that
    // split here keeps words like NULL and INTO valid inside SQL when the
    // current PL/pgSQL context does not use them as delimiters.
    //
    // The hidden wrapper rules alias every external token to the same visible
    // node name, `sql_expression`, so existing injections and editor queries
    // can continue to target one node type.
    _sql_statement_expr: $ => alias($._sql_statement, $.sql_expression),
    _sql_semicolon_expr: $ => alias($._sql_until_semicolon, $.sql_expression),
    _sql_then_expr: $ => alias($._sql_until_then, $.sql_expression),
    _sql_loop_expr: $ => alias($._sql_until_loop, $.sql_expression),
    _sql_assignment_expr: $ => alias($._sql_until_assignment, $.sql_expression),
    _sql_range_expr: $ => alias($._sql_until_range, $.sql_expression),
    _sql_by_or_loop_expr: $ => alias($._sql_until_by_or_loop, $.sql_expression),
    _sql_into_using_or_semicolon_expr: $ => alias($._sql_until_into_using_or_semicolon, $.sql_expression),
    _sql_using_or_semicolon_expr: $ => alias($._sql_until_using_or_semicolon, $.sql_expression),
    _sql_using_or_loop_expr: $ => alias($._sql_until_using_or_loop, $.sql_expression),
    _sql_comma_or_semicolon_expr: $ => alias($._sql_until_comma_or_semicolon, $.sql_expression),
    _sql_comma_using_or_semicolon_expr: $ => alias($._sql_until_comma_using_or_semicolon, $.sql_expression),
    _sql_comma_or_loop_expr: $ => alias($._sql_until_comma_or_loop, $.sql_expression),
    _sql_semicolon_guarded_expr: $ => alias($._sql_until_semicolon_guarded, $.sql_expression),

    // ── Common helpers ────────────────────────────────────────────────────────
    any_identifier: $ => choice(
      $.identifier,
      $.unreserved_keyword
    ),

    // ── Keyword category lists ────────────────────────────────────────────────

    unreserved_keyword: $ => choice(
      $.kw_absolute,
      $.kw_alias,
      $.kw_and,
      $.kw_array,
      $.kw_assert,
      $.kw_backward,
      $.kw_call,
      $.kw_chain,
      $.kw_close,
      $.kw_collate,
      $.kw_column,
      $.kw_column_name,
      $.kw_commit,
      $.kw_constant,
      $.kw_constraint,
      $.kw_constraint_name,
      $.kw_continue,
      $.kw_current,
      $.kw_cursor,
      $.kw_datatype,
      $.kw_debug,
      $.kw_default,
      $.kw_detail,
      $.kw_diagnostics,
      $.kw_do,
      $.kw_dump,
      $.kw_elsif,
      $.kw_errcode,
      $.kw_error,
      $.kw_exception,
      $.kw_execute,
      $.kw_exit,
      $.kw_fetch,
      $.kw_first,
      $.kw_forward,
      $.kw_get,
      $.kw_hint,
      $.kw_import,
      $.kw_info,
      $.kw_insert,
      $.kw_is,
      $.kw_last,
      $.kw_log,
      $.kw_merge,
      $.kw_message,
      $.kw_message_text,
      $.kw_move,
      $.kw_next,
      $.kw_no,
      $.kw_notice,
      $.kw_open,
      $.kw_option,
      $.kw_perform,
      $.kw_pg_context,
      $.kw_pg_datatype_name,
      $.kw_pg_exception_context,
      $.kw_pg_exception_detail,
      $.kw_pg_exception_hint,
      $.kw_pg_routine_oid,
      $.kw_print_strict_params,
      $.kw_prior,
      $.kw_query,
      $.kw_raise,
      $.kw_relative,
      $.kw_return,
      $.kw_returned_sqlstate,
      $.kw_reverse,
      $.kw_rollback,
      $.kw_row_count,
      $.kw_rowtype,
      $.kw_schema,
      $.kw_schema_name,
      $.kw_scroll,
      $.kw_slice,
      $.kw_sqlstate,
      $.kw_stacked,
      $.kw_strict,
      $.kw_table,
      $.kw_table_name,
      $.kw_type,
      $.kw_use_column,
      $.kw_use_variable,
      $.kw_variable_conflict,
      $.kw_warning
    ),

    // ── Keyword tokens (case-insensitive) ─────────────────────────────────────

    kw_begin: _ => token(prec(1, /[bB][eE][gG][iI][nN]/)),
    kw_by: _ => token(prec(1, /[bB][yY]/)),
    kw_end: _ => token(prec(1, /[eE][nN][dD]/)),
    kw_for: _ => token(prec(1, /[fF][oO][rR]/)),
    kw_foreach: _ => token(prec(1, /[fF][oO][rR][eE][aA][cC][hH]/)),
    kw_if: _ => token(prec(1, /[iI][fF]/)),
    kw_in: _ => token(prec(1, /[iI][nN]/)),
    kw_into: _ => token(prec(1, /[iI][nN][tT][oO]/)),
    kw_loop: _ => token(prec(1, /[lL][oO][oO][pP]/)),
    kw_null: _ => token(prec(1, /[nN][uU][lL][lL]/)),
    kw_or: _ => token(prec(1, /[oO][rR]/)),
    kw_then: _ => token(prec(1, /[tT][hH][eE][nN]/)),
    kw_using: _ => token(prec(1, /[uU][sS][iI][nN][gG]/)),
    kw_when: _ => token(prec(1, /[wW][hH][eE][nN]/)),
    kw_while: _ => token(prec(1, /[wW][hH][iI][lL][eE]/)),
    kw_and: _ => token(prec(1, /[aA][nN][dD]/)),
    kw_array: _ => token(prec(1, /[aA][rR][rR][aA][yY]/)),
    kw_assert: _ => token(prec(1, /[aA][sS][sS][eE][rR][tT]/)),
    kw_call: _ => token(prec(1, /[cC][aA][lL][lL]/)),
    kw_chain: _ => token(prec(1, /[cC][hH][aA][iI][nN]/)),
    kw_commit: _ => token(prec(1, /[cC][oO][mM][mM][iI][tT]/)),
    kw_current: _ => token(prec(1, /[cC][uU][rR][rR][eE][nN][tT]/)),
    kw_detail: _ => token(prec(1, /[dD][eE][tT][aA][iI][lL]/)),
    kw_diagnostics: _ => token(prec(1, /[dD][iI][aA][gG][nN][oO][sS][tT][iI][cC][sS]/)),
    kw_errcode: _ => token(prec(1, /[eE][rR][rR][cC][oO][dD][eE]/)),
    kw_exception: _ => token(prec(1, /[eE][xX][cC][eE][pP][tT][iI][oO][nN]/)),
    kw_execute: _ => token(prec(1, /[eE][xX][eE][cC][uU][tT][eE]/)),
    kw_get: _ => token(prec(1, /[gG][eE][tT]/)),
    kw_message_text: _ => token(prec(1, /[mM][eE][sS][sS][aA][gG][eE]_[tT][eE][xX][tT]/)),
    kw_no: _ => token(prec(1, /[nN][oO]/)),
    kw_notice: _ => token(prec(1, /[nN][oO][tT][iI][cC][eE]/)),
    kw_perform: _ => token(prec(1, /[pP][eE][rR][fF][oO][rR][mM]/)),
    kw_pg_exception_detail: _ => token(prec(1, /[pP][gG]_[eE][xX][cC][eE][pP][tT][iI][oO][nN]_[dD][eE][tT][aA][iI][lL]/)),
    kw_raise: _ => token(prec(1, /[rR][aA][iI][sS][eE]/)),
    kw_return: _ => token(prec(1, /[rR][eE][tT][uU][rR][nN]/)),
    kw_reverse: _ => token(prec(1, /[rR][eE][vV][eE][rR][sS][eE]/)),
    kw_rollback: _ => token(prec(1, /[rR][oO][lL][lL][bB][aA][cC][kK]/)),
    kw_row_count: _ => token(prec(1, /[rR][oO][wW]_[cC][oO][uU][nN][tT]/)),
    kw_slice: _ => token(prec(1, /[sS][lL][iI][cC][eE]/)),
    kw_sqlstate: _ => token(prec(1, /[sS][qQ][lL][sS][tT][aA][tT][eE]/)),
    kw_stacked: _ => token(prec(1, /[sS][tT][aA][cC][kK][eE][dD]/)),
    kw_strict: _ => token(prec(1, /[sS][tT][rR][iI][cC][tT]/)),
    identifier: _ => token(prec(0, /[a-zA-Z_\u0080-\u00ff][a-zA-Z0-9_$\u0080-\u00ff]*/)),

    // Positional parameter reference ($1, $2, ...) — used as an ALIAS target.
    integer_literal: _ => token(/[0-9](_?[0-9])*/),

    string_literal: _ => token(/'([^']|'')*'/),

    comment: _ => token(choice(
      /--[^\r\n]*/,
      /\/\*[^*]*\*+([^/*][^*]*\*+)*\//
    )),

  }, // end rules
}); // end grammar
